--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
             <div class="destination" id="England">
                 <h2>England</h2>
             </div>
+            <div class="destination" id="Paris">
+                <h2>Paris</h2>
+            </div>
         </div>
     </div>
 
